--- a/views/header.ejs
+++ b/views/header.ejs
@@ -136,7 +136,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= user[0].FirstName + " "+ user[0].LastName%> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                                <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Déconnexion</a>
                             </li>
                         </ul>
                     <%}%>
